# bevy

./: Cargo.toml
crates/bevy_editor/: Cargo.toml  STATUS.md  TODO.md
crates/bevy_editor/src/: actions.rs  animation.rs  audio.rs  build_export.rs  code.rs  code_highlight.rs  diagnostics.rs  gameplay.rs  lib.rs  localization.rs  markers.rs  material.rs  play.rs  project.rs  remote.rs  scene_io.rs  scripting.rs  snapshot.rs  spawning.rs  state.rs  tabs.rs  theme_editor.rs  tilemap.rs  ui_edit.rs  undo.rs
crates/bevy_editor/src/assets/icons/: README.md
crates/bevy_editor/src/hierarchy/: mod.rs
crates/bevy_editor/src/inspector/: mod.rs
crates/bevy_editor/src/scripting/: lang.rs
crates/bevy_editor/src/ui/: bottom_dock.rs  command_palette.rs  console.rs  docking.rs  help_overlay.rs  icons.rs  mod.rs  shell.rs  shortcuts.rs  splitter.rs  status_bar.rs  style.rs  theme_switch.rs  toast.rs
crates/bevy_editor/src/viewport/: camera.rs  gizmos.rs  grid.rs  hud.rs  mod.rs  outline.rs  picking.rs
crates/bevy_editor/tools/: gen_icons.mjs
crates/bevy_internal/: Cargo.toml
crates/bevy_internal/src/: lib.rs
examples/editor/: editor.rs  editor_verify.rs
