[package]
name = "bevy_editor"
version = "0.20.0-dev"
edition = "2024"
description = "A GUI editor for the Bevy Engine, built on bevy_feathers"
homepage = "https://bevy.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.20.0-dev" }
bevy_asset = { path = "../bevy_asset", version = "0.20.0-dev" }
bevy_camera = { path = "../bevy_camera", version = "0.20.0-dev" }
bevy_color = { path = "../bevy_color", version = "0.20.0-dev" }
bevy_core_pipeline = { path = "../bevy_core_pipeline", version = "0.20.0-dev" }
bevy_derive = { path = "../bevy_derive", version = "0.20.0-dev" }
bevy_dev_tools = { path = "../bevy_dev_tools", version = "0.20.0-dev" }
bevy_ecs = { path = "../bevy_ecs", version = "0.20.0-dev" }
bevy_feathers = { path = "../bevy_feathers", version = "0.20.0-dev" }
bevy_gizmos = { path = "../bevy_gizmos", version = "0.20.0-dev" }
bevy_image = { path = "../bevy_image", version = "0.20.0-dev" }
bevy_input = { path = "../bevy_input", version = "0.20.0-dev" }
bevy_input_focus = { path = "../bevy_input_focus", version = "0.20.0-dev" }
bevy_light = { path = "../bevy_light", version = "0.20.0-dev" }
bevy_log = { path = "../bevy_log", version = "0.20.0-dev" }
bevy_math = { path = "../bevy_math", version = "0.20.0-dev" }
bevy_mesh = { path = "../bevy_mesh", version = "0.20.0-dev" }
bevy_pbr = { path = "../bevy_pbr", version = "0.20.0-dev" }
bevy_picking = { path = "../bevy_picking", version = "0.20.0-dev" }
bevy_platform = { path = "../bevy_platform", version = "0.20.0-dev" }
bevy_reflect = { path = "../bevy_reflect", version = "0.20.0-dev" }
bevy_render = { path = "../bevy_render", version = "0.20.0-dev" }
bevy_scene = { path = "../bevy_scene", version = "0.20.0-dev" }
bevy_sprite = { path = "../bevy_sprite", version = "0.20.0-dev" }
bevy_state = { path = "../bevy_state", version = "0.20.0-dev" }
bevy_text = { path = "../bevy_text", version = "0.20.0-dev" }
bevy_time = { path = "../bevy_time", version = "0.20.0-dev" }
bevy_transform = { path = "../bevy_transform", version = "0.20.0-dev" }
bevy_ui = { path = "../bevy_ui", version = "0.20.0-dev", features = [
  "bevy_picking",
] }
bevy_ui_render = { path = "../bevy_ui_render", version = "0.20.0-dev" }
bevy_ui_widgets = { path = "../bevy_ui_widgets", version = "0.20.0-dev" }
bevy_window = { path = "../bevy_window", version = "0.20.0-dev" }
bevy_world_serialization = { path = "../bevy_world_serialization", version = "0.20.0-dev", features = [
  "serialize",
] }

# other
ron = "0.10"
serde = { version = "1", features = ["derive"] }

[features]
default = []

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
  "-Zunstable-options",
  "--generate-link-to-definition",
  "--generate-macro-expansion",
]
all-features = true
